external-crates/move/move-compiler/tests/move_check/parser/use_with_modifiers_exp.exp
error[E01002]: unexpected token
  ┌─ tests/move_check/parser/use_with_modifiers_exp.move:3:9
  │
3 │         public use fun bar as X.baz;
  │         ^^^^^^
  │         │
  │         Unexpected 'public'
  │         Expected an expression term

